--- a/src/styles/banner.scss
+++ b/src/styles/banner.scss
@@ -7,39 +7,64 @@
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
-  color: rgb(24, 24, 24);
-}
-.logo-img {
-  position: absolute;
-  left: 0;
-  top: -3rem;
-  height: 25rem;
-  z-index: 1;
+  color: rgb(255, 255, 255);
+  border: 0px;
 }
 .title-info {
   flex-grow: 0;
-  padding: 2.5rem;
+  padding: 1.5vw;
   z-index: 2;
 }
 .title-info h1 {
-  margin-bottom: 1rem;
-  font-size: 3rem;
+  margin-bottom: 1vw;
   text-align: right;
+  font-size: 5.5vw;
 }
 .title-detail {
   text-align: right;
 }
 .title-detail div {
-  margin-bottom: 0.2rem;
+  margin-bottom: 0.2vw;
+  font-size: 1vw;
+}
+.title-detail a {
+  color: white;
 }
 
 @media all and (max-width: 799px) {
   .title-info {
-    padding: 1.5rem;
+    padding: 1.5vw;
     width: 100%;
     background-color: rgba(255, 255, 255, 0.562);
   }
   .title-info h1 {
-    font-size: 2.5rem;
+    font-size: 7vw;
   }
+}
+
+.banner-video {
+  position: absolute;
+  width: 100%;
+  height: fit-content;
+  background-color: #000;
+  overflow: hidden;
+  z-index: 1;
+  transform: translate(0, -30%);
+  top: 30%;
+}
+.banner-video video {
+  width: 100%;
+  height: auto;
+}
+
+.banner-logo {
+  position: absolute;
+  max-width: 20vw;
+  left: 1vw;
+  top: 1vw;
+  z-index: 1;
+}
+
+.banner-logo img {
+  width: 100%;
 }
