update favicon and backgoorund image for preparing the prod release.

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -25,7 +25,7 @@ body {
       rgba(255, 255, 255, 0.83),
       rgba(255, 255, 255, 0.83)
     ),
-    url("@/assets/ui/banner_bg.png");
+    url("@/assets/ui/background.webp");
   width: 100%;
   display: flex;
   justify-content: center;
