darkmode feature has been fulfilled

--- a/src/styles/functionbar.scss
+++ b/src/styles/functionbar.scss
@@ -1,7 +1,34 @@
+.lightIcon {
+  width: 1.6em;
+  height: 1.6em;
+  background-image: url("/node_modules/bootstrap-icons/icons/sun.svg");
+  background-size: contain;
+}
+.darkIcon {
+  width: 1.6em;
+  height: 1.6em;
+  background-image: url("/node_modules/bootstrap-icons/icons/moon-fill.svg");
+  background-size: contain;
+}
+.systemIcon {
+  width: 1.6em;
+  height: 1.6em;
+  background-image: url("@/assets/ui/auto-mode.svg");
+  background-size: contain;
+}
+.night-mode-button {
+  border-radius: 2em;
+  height: 2.2em;
+  width: 2.2em;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
 .c-countdown-outer {
   margin-top: 1rem;
+  justify-content: space-between;
   display: flex;
-  flex-direction: row-reverse;
 }
 .c-countdown {
   flex-grow: 1;
