--- a/src/styles/banner.scss
+++ b/src/styles/banner.scss
@@ -57,7 +57,8 @@
 }
 @media all and (max-width: 799px) {
   .title-info {
-    padding: 1.5vw;
+    padding: 0.3rem;
+    padding-right: 1rem;
     width: 100%;
     background-color: rgba(255, 255, 255, 0.618);
   }
