fix dark mode bug and add localstorage storing for darkmode stutas. Reform darkmode lib as love component.

--- a/src/styles/functionbar.scss
+++ b/src/styles/functionbar.scss
@@ -13,7 +13,7 @@
 .systemIcon {
   width: 1.6em;
   height: 1.6em;
-  background-image: url("@/assets/ui/auto-mode.svg");
+  background-image: url("/node_modules/bootstrap-icons/icons/tv.svg");
   background-size: contain;
 }
 .night-mode-button {
