add pagination on top of the table to help control easily

--- a/src/styles/mainsonglist.scss
+++ b/src/styles/mainsonglist.scss
@@ -41,7 +41,8 @@
 }
 
 .c-song-list {
-  border: 1px solid rgb(224, 224, 224);
+  border-left: 1px solid rgb(224, 224, 224);
+  border-right: 1px solid rgb(224, 224, 224);
 }
 .song-list-header {
   display: flex;
