--- a/src/styles/songlistpagination.scss
+++ b/src/styles/songlistpagination.scss
@@ -6,6 +6,7 @@
   flex-wrap: wrap-reverse;
   justify-content: flex-end;
   align-items: center;
+  border-top: 1px solid rgb(224, 224, 224);
   border-bottom: 1px solid rgb(224, 224, 224);
   border-left: 1px solid rgb(224, 224, 224);
   border-right: 1px solid rgb(224, 224, 224);
