--- a/src/styles/audioplayer.scss
+++ b/src/styles/audioplayer.scss
@@ -54,6 +54,19 @@
   text-overflow: ellipsis;
   overflow: hidden;
 }
+.songname-marquee span {
+  display: inline-block;
+  padding-left: 100%;
+  animation: marquee 20s linear infinite;
+}
+@keyframes marquee {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
 .singer {
   flex-shrink: 0;
 }
