--- a/src/styles/audioplayer.scss
+++ b/src/styles/audioplayer.scss
@@ -54,7 +54,7 @@
   text-overflow: ellipsis;
   overflow: hidden;
 }
-.songname-marquee span {
+.songname-marquee div {
   display: inline-block;
   padding-left: 100%;
   animation: marquee 20s linear infinite;
