--- a/src/styles/audioplayer.scss
+++ b/src/styles/audioplayer.scss
@@ -58,6 +58,7 @@
   display: inline-block;
   padding-left: 100%;
   animation: marquee 20s linear infinite;
+  font-size: 1.2rem;
 }
 @keyframes marquee {
   0% {
