--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -27,8 +27,9 @@
 }
 .popup-close {
   border-radius: 1rem;
-  width: 1.5rem;
-  height: 1.5rem;
+  width: 1.5em;
+  height: 1.5em;
+  text-align: center;
 }
 @media (any-hover: hover) {
   .popup-close:hover {
@@ -39,11 +40,7 @@
   background-color: rgba(0, 0, 0, 0.35);
 }
 .popup-close-img {
-  width: 1.5rem;
-  height: 1.5rem;
-  background-image: url("/node_modules/bootstrap-icons/icons/x.svg?url");
-  background-position: center;
-  background-size: contain;
+  font-size: 1.2em;
 }
 .popup-content {
   margin: 1.5rem;
