hotfix: fix banner logo for build

--- a/src/styles/banner.scss
+++ b/src/styles/banner.scss
@@ -52,9 +52,8 @@
   z-index: 2;
   height: 10rem;
   width: 10rem;
-  background-image: url("@/assets/");
+  /* background-image: url("@/assets/logo.png"); */
   background-repeat: no-repeat;
-  /*有了logo后加进去*/
 }
 @media all and (max-width: 799px) {
   .title-info {
